# lesion-classifier-generalization

./: .gitignore  README.md  cross_eval_effnet.py  download_datasets.sh  eval_effnet_isic.py  eval_effnet_pad.py  main.py  pyproject.toml  train_effnet_isic.py  train_effnet_pad.py  train_with_wandb.py
lesion_classifier_generalization/: __init__.py  data_utils.py  effnet.py  eval.py  isic_dataset.py  pad_ufes_dataset.py  train.py
