[project]
name = "lesion-classification-generalization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pretrainedmodels>=0.7.4",
    "raug",
    "scikit-learn>=1.7.1",
    "torchvision>=0.23.0",
    "wandb>=0.21.1",
]

[tool.uv.sources]
raug = { git = "https://github.com/paaatcha/raug.git" }
